# remote-dl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  download-hls.yml  download.yml  test.yml
src/: api.rs  cli.rs  config.rs  error.rs  main.rs
tests/: integration.rs
